changed sun.misc to apache to encode/decode. added files of other classes