@@ -1,6 +1,7 @@
 package lecture3_BlockCiphers;
 
 import java.security.InvalidKeyException;
+import org.apache.commons.codec.binary.Base64;
 import java.security.NoSuchAlgorithmException;
 
 import javax.crypto.BadPaddingException;
@@ -36,7 +37,7 @@ public class DES{
 			Cipher cipher = Cipher.getInstance("DES/ECB/PKCS5Padding");
 			cipher.init(Cipher.ENCRYPT_MODE, key);
 			byte[] byteResult = cipher.doFinal(bytePlainText);
-			String encodedResult = new sun.misc.BASE64Encoder().encode(byteResult);
+			String encodedResult = Base64.encodeBase64String(byteResult);
 			//display result
 			System.out.println("Encrypted byte Message: "+ new String(byteResult));	//after encryption
 			System.out.println("Base64 Encoded Encrypted Message: "+ encodedResult );	//after encryption followed by encoding
